--- a/ShootTheGoose/src/app.css
+++ b/ShootTheGoose/src/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body.dark-mode h1 {
+    font-size: xx-large;
+    font-style: normal;
+    color: red;
+}
+
+.dark-mode {
+    background-image: url("/images/bg2.jpeg");
+}
