--- a/ShootTheGoose/src/app.css
+++ b/ShootTheGoose/src/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .custom-cursor {
+    cursor: url('./viseur.cur'), auto;
+} */
+
+:global(body){
+    cursor: crosshair;
+    /* cursor: url('images/target.cur'), default; */
+}
